# duckdb-anyblox

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  ignition.sql
.github/workflows/: MainDistributionPipeline.yml
scripts/: ignition-tpch-bench.py  setup-custom-toolchain.sh  tpch-create.sql
scripts/clickbench/: clickbench-bench.py  clickbench-queries.md  copy-parquet-files.sql  create-anyblox.sql  create-ignition.sql  create-parquet.sql  create-raw.sql  partition-parquet.sql
scripts/clickbench/queries/: clickbench-q29.sql
scripts/tpch/: anyblox-tpch-bench.py  ignition-tpch-bench.py  tpch-create-raw.sql  tpch-create.sql
src/: anyblox_extension.cpp  ignition_extension.cpp
src/include/: anyblox_extension.hpp  ignition_extension.hpp
test/sql/: anyblox.test  ignition.test
